CloudAlpacas/salesforce/main/default/objects/WebsiteEngagement__c/fields/Browser_Name__c.field-meta.xml
<CustomField>
    <fullName>Browser_Name__c</fullName>
    <label>Browser Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>