CloudAlpacas/salesforce/main/default/objects/WebsiteEngagement__c/fields/Device_Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Device_Model_Name__c</fullName>
    <label>Device Model Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>