CloudAlpacas/salesforce/main/default/objects/WebsiteEngagement__c/fields/Engagement_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Date_Time__c</fullName>
    <description>Used as Data Cloud Engagement category date field.</description>
    <label>Engagement Date Time</label>
    <type>DateTime</type>
</CustomField>