CloudAlpacas/salesforce/main/default/objects/WebsiteEngagement__c/fields/External_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Source_Id__c</fullName>
    <description>Secondary external reference id surfaced as ssot__ExternalSourceId__c on the WebsiteEngagement DMO.</description>
    <label>External Source Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>