CloudAlpacas/salesforce/main/default/objects/WebsiteEngagement__c/fields/Page_Public_Title__c.field-meta.xml
<CustomField>
    <fullName>Page_Public_Title__c</fullName>
    <label>Page Public Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>