CloudAlpacas/salesforce/main/default/objects/WebsiteEngagement__c/fields/Website_Catalog_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Website_Catalog_Object_Type__c</fullName>
    <label>Website Catalog Object Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>