CloudAlpacas/salesforce/main/default/objects/WebsiteEngagement__c/fields/Website_Engagement_Id__c.field-meta.xml
<CustomField>
    <fullName>Website_Engagement_Id__c</fullName>
    <description>External upsert key + Data Cloud DMO primary key.</description>
    <externalId>true</externalId>
    <label>Website Engagement Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>